--- a/File Trang chủ/Home.css
+++ b/File Trang chủ/Home.css
@@ -43,32 +43,35 @@ a {
 .navbar-left-input-total {
     display: flex;
     align-items: center;
-    width: 200px;
+    width: 220px;
     position: relative;
+    height: 35px;
+    
 
     border: 1px, solid #e7e8e9;
+    border-radius: 5px;
 }
 
 .navbar-left-input-total button {
     font-size: 15px;
     position: absolute;
-    left: 5px;
-
-    background-color: white;
+    right: 2px;
     border: none;
+    background-color: white;
+   
 }
 
 .navbar-left-input:focus {
-    border: none;
+  border: none;
 }
 
 .navbar-left-input {
 
-    width: 100%;
+    width: 90%;
     font-size: 15px;
-    height: 20px;
+    height: 25px;
     position: absolute;
-    left: 18px;
+    left: 2px;
     border: none;
 
 
@@ -130,7 +133,17 @@ a {
     font-size: 20px;
 
 }
-.total-qty {
+
+    
+
+.navbar-right #user-name{
+    font-size: 12px;
+    
+}
+
+    
+
+/* .total-qty {
     position: absolute;
     height: 1rem;
     width: 1rem;
@@ -145,7 +158,7 @@ a {
     right: 1.5rem;
   
     user-select: none;
-  }
+  } */
 
 /* PHẦN MAIN */
 
@@ -198,6 +211,7 @@ main {
 
 .product-tab .product-content {
     display: flex;
+    flex-wrap: nowrap;
     gap: 20px;
     margin-bottom: 20px;
     
@@ -218,6 +232,13 @@ main {
         top: 8px;
         right: 9px;
     }
+
+.image-product:hover {
+    transform: scale(1.15);
+    transition: transform 0.5s ease-in-out;
+
+}
+
 .product-tab .product-content .product .list-color{
     display: flex;
     justify-content: space-between
@@ -288,6 +309,7 @@ footer {
     flex: 3;
     display: flex;
     gap: 20px;
+    justify-content: center;
 }
 
 .footer-center ul {
@@ -305,6 +327,3 @@ footer {
 
 }
 
-.footer-right {
-    flex: 1;
-}
