--- a/Trang sản phẩm/product.css
+++ b/Trang sản phẩm/product.css
@@ -158,3 +158,14 @@
     padding-top: 4px;
   }
   
+#pagination{
+  text-align: center;
+  margin-top: 20px;
+  color: #1a9b65
+}
+.button-choosePage{
+  color: white;
+  background-color: rgb(103, 57, 155);
+  width: 50px;
+  height: 20px;
+}
